--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,4 +1,22 @@
-<h1>Album Review Scraper</h1>
+<nav class="navbar navbar-expand-sm bg-dark">
+
+  <!-- Links -->
+  <ul class="navbar-nav">
+    <li class="nav-item">
+     <button><a class="nav-link scrape" href="#">Scrape Articles</a></button> 
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="/saved">Saved Articles</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="/">Home</a>
+    </li>
+  </ul>
+
+</nav>
+
+<div class="jumbotorn"><h1>Album Review Scraper</h1></div>
+
 <div id="container-cards">
 
     {{#each articles}}
