css styling added

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -23,6 +23,51 @@
     .delete {
       margin: 20px;
     }
+    .card {
+      margin: 20px;
+      border-bottom: 2px solid darkslategray;
+      border-right: 2px solid darkslategray;
+      
+    }
+   
+    
+    .nav-link {
+      color: white;
+      margin: 10px;
+      font-size: 16px;
+    }
+    button .nav-link {
+      height: 40px;
+      margin: 0 auto;
+    }
+    button {
+      background-color: #DD7596;
+      color: white;
+    }
+     .card-header  {
+      background-color: #CF1259;
+    }
+    {{!-- .card-header .card-text {
+      color: white;
+    } --}}
+   h2 {
+     color: white;
+   }
+   h3 {
+     color: white;
+   }
+   .jumbotron {
+      background-color: #DD7596;
+      color: white;
+      text-align: center;
+    }
+    a:hover {
+       text-decoration: none;
+    }
+    .card-header:hover {
+      background-color: #DD7596;
+    }
+    
   </style>
 </head>
 
