--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,7 +3,7 @@
   <!-- Links -->
   <ul class="navbar-nav">
     <li class="nav-item">
-     <button><a class="nav-link scrape" href="#">Scrape Articles</a></button> 
+     <button class="btn"><a class="nav-link scrape" href="#">Scrape Articles</a></button> 
     </li>
     <li class="nav-item">
       <a class="nav-link" href="/saved">Saved Articles</a>
@@ -15,7 +15,7 @@
 
 </nav>
 
-<div class="jumbotorn"><h1>Album Review Scraper</h1></div>
+<div class="jumbotron"><h1>Album Review Scraper</h1></div>
 
 <div id="container-cards">
 
@@ -27,10 +27,10 @@
                 <h2><span class="label card-text"><b>Album: </b></span> {{this.title}}</h2>
                 <h3><span class="label card-text"><b>Artist: </b></span> {{this.artist}}</h3>
     </a>
-    <span><button class="save-button btn btn-info" data-id="{{id}}">Save</button></span>
 </div>
 <div class="card-body">
     <p><span class="label card-text"></span> {{this.summary}}</p>
+       <span><button class="save-button btn" data-id="{{id}}">Save</button></span>
 </div>
 
 </div>
