--- a/views/saved.handlebars
+++ b/views/saved.handlebars
@@ -3,7 +3,7 @@
 
     <ul class="navbar-nav">
     <li class="nav-item">
-     <button><a class="nav-link scrape" href="#">Scrape Articles</a></button> 
+     <button class="btn"><a class="nav-link scrape" href="#">Scrape Articles</a></button> 
     </li>
     <li class="nav-item">
       <a class="nav-link" href="/saved">Saved Articles</a>
@@ -19,6 +19,7 @@
 <div id="container-cards">
 
     {{#each articles}}
+ 
     <a href="https://pitchfork.com{{this.link}}" target="_blank">
         <div class="card">
 
@@ -30,7 +31,7 @@
     <div class="card-body">
         <p><span class="label card-text"></span> {{this.summary}}</p>
         <!-- Button trigger modal -->
-        <span><button type="button" class="btn btn-info notes-button" data-toggle="modal" data-id="{{this.id}}" data-target="#exampleModal">
+        <span><button type="button" class="btn notes-button" data-toggle="modal" data-id="{{id}}" data-target="#exampleModal">
             Notes
         </button></span>
     </div>
@@ -38,6 +39,8 @@
 </div>
 
 <!-- Modal -->
+
+{{/each}}
 <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
     aria-hidden="true">
     <div class="modal-dialog" role="document">
@@ -52,16 +55,16 @@
     
             </div><hr></hr>
                 <form>
-                <textarea data-id="{{this.id}}" class="note-text">    {{#each ../notes}}{{../this.title}}{{/each}}</textarea>
+                
+                <textarea id="modal-text" data-id="" class="note-text"> </textarea>
                 </form>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" data-id="{{this.id}}" class="btn btn-primary save-note">Save Notes</button>
+                <button type="button" data-id="" class="btn save-note">Save Notes</button>
             </div>
         </div>
     </div>
 </div>
-{{/each}}
 </div>
 
 
