code cleanup and comments

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -15,7 +15,7 @@
 
 </nav>
 
-<div class="jumbotron"><h1>Album Review Scraper</h1></div>
+<div class="jumbotron"><h1>Pitchfork Album Review Scraper</h1></div>
 
 <div id="container-cards">
 
